--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -1,9 +1,29 @@
-card {
+.card {
     position: relative;
-}
-.card img {
+  }
+  .card img {
     width: 100%;
     display: block;
     border: 2px solid #fff;
     border-radius: 6px;
-}
+  }
+  
+  /* front of card - the picture */
+  .card .front {
+    transform: rotateY(90deg);
+    transition: all ease-in 0.2s;
+    position: absolute;
+  }
+  .flipped .front {
+    transform: rotateY(0deg);
+    transition-delay: 0.2s;
+  }
+  .card .back {
+    transition: all ease-in 0.2s;
+    transition-delay: 0.2s;
+  }
+
+  .flippedS .back {
+    transform: rotateY(90deg);
+    transition-delay: 0s;
+  }
